# agentic-workspace

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  Dockerfile  LICENSE  README.md  deployment.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar_build.yml
demo/: index.html
src/backend/: api.py  claude_sdk.py  client_loop.py  gh_sdk.py  service.py
src/scripts/: cluster_issues.py  download_issues.sh
tests/: conftest.py  fakes.py  test_api.py  test_client_loop.py  test_service.py
