[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aw"
dynamic = ["version"]
description = "agentic workspace backend"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
 
dependencies = [
    "github",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
homepage = "https://github.com/ssciwr/AMMICO"  # FIXME not shown by pip
documentation = "https://ssciwr.github.io/AMMICO/build/html/index.html"

[tool.setuptools]
packages = ["aw"]
