[build-system]
requires = ["setuptools >= 77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "aw"
version = "0.1.0"
description = "agentic workspace backend"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "anthropic[mcp]",
    "prompt_toolkit",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.urls]
homepage = "https://github.com/iulusoy/agentic-workspace"  # FIXME not shown by pip
documentation = "https://github.com/iulusoy/agentic-workspace"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
